--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.pyc
 .python-version
-application/config.py
-application/ipv4_locations.csv
-application/api/migrations/
+config.*
+ipv4_locations.csv
+api/migrations/
+staticfiles/
